--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "start:prod": "node dist/main.ts",
-    "prestart:prod": "rimraf dist && yarn build",
-    "postinstall": "npm run prestart:prod"
+    "prestart:prod": "rimraf dist && yarn install && yarn build",
+    "postinstall": "yarn start prestart:prod"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
