--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "start:prod": "node dist/main",
     "prestart:prod": "rimraf dist && yarn build",
-    "postinstall": "yarn start prestart:prod"
+    "postinstall": "yarn prestart:prod"
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
