--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:prod": "node dist/main",
+    "start:prod": " node --max-old-space-size=4096 && node dist/main",
     "prestart:prod": "rimraf dist && yarn build",
     "postinstall": "yarn prestart:prod"
   },
