--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "start:prod": "node dist/main",
-    "prestart:prod": "node --max-old-space-size=4096 && rimraf dist && yarn build",
+    "prestart:prod": "rimraf dist && yarn build",
     "postinstall": "yarn prestart:prod"
   },
   "dependencies": {
