--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
+  "useTabs": false,
+  "printWidth": 100,
+  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "semi": false,
+  "bracketSpacing": false,
+  "arrowParens": "avoid",
+  "endOfLine": "lf"
 }
