--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^7.5.1",
     "firebase-admin": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
