--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.5.1",
+    "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^7.5.1",
