--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/typeorm": "^8.0.2",
     "firebase-admin": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
