--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "typeorm": "^0.2.38",
+    "unique-names-generator": "^4.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
@@ -47,6 +49,7 @@
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
+    "mongodb": "^4.1.3",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
