--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/gateway": "^0.42.3",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^1.0.2",
     "@nestjs/core": "^7.5.1",
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^8.0.2",
+    "apollo-server-express": "^3.4.0",
     "firebase-admin": "^10.0.0",
+    "graphql": "15.7.2",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3",
+    "rxjs": "7",
+    "ts-morph": "^12.0.0",
     "typeorm": "^0.2.38",
     "unique-names-generator": "^4.6.0"
   },
