--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^10.0.0",
     "graphql": "15.7.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "3.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "7",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/mongodb": "3.6.20",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
@@ -53,7 +55,6 @@
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.6.3",
-    "mongodb": "^4.1.3",
     "prettier": "^2.1.2",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
