--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.6",
     "@types/mongodb": "3.6.20",
     "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
+    "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "bson": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4",
