--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^8.0.2",
     "apollo-server-express": "^3.4.0",
+    "change-case": "^4.1.2",
     "firebase-admin": "^10.0.0",
     "graphql": "15.7.2",
     "jsonwebtoken": "^8.5.1",
