Prepare for heroku

--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "node --max_old_space_size=2560 && nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
+    "start": "node --max_old_space_size=2560 && nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "prestart:prod": "rimraf dist && yarn build",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "yarn prestart:prod"
   },
   "dependencies": {
     "@apollo/gateway": "^0.42.3",
@@ -28,7 +30,18 @@
     "@nestjs/graphql": "^9.1.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/cli": "^7.5.1",
+    "@nestjs/schematics": "^7.1.3",
+    "@nestjs/testing": "^7.5.1",
+    "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/mongodb": "3.6.20",
+    "@types/node": "^14.14.6",
+    "@types/supertest": "^2.0.10",
+    "@types/ws": "^8.2.0",
     "apollo-server-express": "^3.4.0",
+    "bson": "^4.6.0",
     "change-case": "^4.1.2",
     "firebase-admin": "^10.0.0",
     "graphql": "15.7.2",
@@ -42,19 +55,8 @@
     "unique-names-generator": "^4.6.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/jsonwebtoken": "^8.5.6",
-    "@types/mongodb": "3.6.20",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
-    "bson": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "^3.1.4",
